--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "jest-json-matchers": "^1.1.0",
     "pg": "^8.7.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
       "jest-extended/all",
-      "jest-sorted"
+      "jest-sorted",
+      "jest-json-matchers/register"
     ]
   }
 }
