--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "supertest": "^6.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jest-json-matchers": "^1.1.0",
-    "pg-format": "^1.0.4",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "pg-format": "^1.0.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
